v.098 - jwt not done yet